Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13732

"lfs fid2path" can't match the rootpath correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      For example,

      [root@centos7-3 tests]# cp /etc/passwd /mnt/lustre/
      [root@centos7-3 tests]# lfs path2fid /mnt/lustre/passwd 
      [0x200000401:0x3:0x0]
      [root@centos7-3 tests]# lfs fid2path /mnt/lustre 0x200000401:0x3:0x0 
      /mnt/lustre/passwd
      [root@centos7-3 tests]# lfs fid2path /mnt/lustre_sdfsf 0x200000401:0x3:0x0
      /mnt/lustre_sdfsf/passwd
      

            emoly.liu Emoly Liu
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: